--- a/ReadMe.rm
+++ b/ReadMe.rm
@@ -2,6 +2,13 @@ Proyecto de unity 3D
 escena de un bosque expansivo
 Todos los assets son gratuitos
 
+la IA del carro negro esta incompleta.
+
+es posible recorrer toda la pista
+
+no hay boton o mecanica de rescate en caso de quedar atascado
+
+
 Audios del bosuqe por Overtone2 freesound (non commercial licence)
 
 --CONTROLES--
